; ModuleID = '/home/carl/AnghaBench/8cc/test/extr_testmain.c_fexpectf.c'
source_filename = "/home/carl/AnghaBench/8cc/test/extr_testmain.c_fexpectf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [32 x i8] c"%s:%d: %f expected, but got %f\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fexpectf(i8* %0, i32 %1, float %2, float %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca float, align 4
  %8 = alloca float, align 4
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store float %2, float* %7, align 4
  store float %3, float* %8, align 4
  %9 = load float, float* %7, align 4
  %10 = load float, float* %8, align 4
  %11 = fcmp oeq float %9, %10
  br i1 %11, label %12, label %13

12:                                               ; preds = %4
  ret void

13:                                               ; preds = %4
  %14 = call i32 (...) @printfail()
  %15 = load i8*, i8** %5, align 8
  %16 = load i32, i32* %6, align 4
  %17 = load float, float* %7, align 4
  %18 = load float, float* %8, align 4
  %19 = call i32 @printf(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i8* %15, i32 %16, float %17, float %18)
  %20 = call i32 @exit(i32 1) #3
  unreachable
}

declare dso_local i32 @printfail(...) #1

declare dso_local i32 @printf(i8*, i8*, i32, float, float) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
